fixed saved posts alignment

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -639,3 +639,7 @@ input:checked + .slider:before {
 .tag {
     color: #0000FF;
 }
+
+.posts-row {
+    width: 100%;
+}
